added composed collections